--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,24 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".GoodActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity" >
+        </activity>
+        <activity
+            android:name=".BadActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity" >
         </activity>
     </application>
 
